# Face-Analyzer

./: Cargo.toml  README.md
scripts/: placeholder.txt
src/: analysis.rs  face.rs  lib.rs  main.rs
src/api/: rest.rs  websocket.rs
src/attributes/: emotion.rs  ethnicity.rs  landmarks.rs  pose.rs
src/database/: embeddings.rs  storage.rs
src/output/: report.rs
src/performance/: optimization.rs
src/processing/: detectors.rs  preprocessing.rs  quality.rs
src/realtime/: video.rs  visualization.rs  webcam.rs
src/security/: anonymization.rs  encryption.rs
src/ui/: app.rs  styles.css
tests/: integration_test.rs
