[package]
name = "face_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = "0.88"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = "1.16"
image = "0.24"
tokio = { version = "1.36", features = ["full"] }
actix-web = "4.5"
actix-files = "0.6"
actix-cors = "0.7"
actix-web-actors = "4.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres"] }
ndarray = "0.15"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
rayon = "1.8"
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
argon2 = "0.5"
jsonwebtoken = "9.2"
dotenv = "0.15"
config = "0.14"
handlebars = "5.1"
csv = "1.3" 