[package]
name = "face-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A face analysis tool with advanced features"
license = "MIT"

[dependencies]
# Core dependencies
opencv = { version = "0.84", features = ["clang-runtime"] }
ort = { version = "1.15", features = ["cuda"] }
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Web and API
actix-web = "4.4"
actix-multipart = "0.6"
actix-cors = "0.6"
actix = "0.13"
actix-web-actors = "4.2"
futures = "0.3"
gloo-net = "0.4"
gloo-file = "0.3"
web-sys = { version = "0.3", features = ["File", "FormData", "Blob"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# UI
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
stylist = { version = "0.12", features = ["yew"] }

# Output
askama = "0.12"
csv = "1.2"
base64 = "0.21"
image = "0.24"

# Security
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# Performance
rayon = "1.7"
lru = "0.11"

# Testing
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[build-dependencies]
askama = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = [
    ".",
] 